UI Grundgerüst erstellt

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="section">
-        <div class="text">Das ist Tim </div>
+        <div class="text">Das ist Tim</div>
+        <button class="reading"></button>
 <!--        <img (Bild von Tim einfügen)>-->
     </div>
     <div class="section">
@@ -23,11 +24,10 @@
         Ständig kneift er die Augen zusammen.
         Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
         <div class="task">
-            Warum soll Tim zum Augenarzt gehen? Schreibe auf. 
+            Warum soll Tim zum Augenarzt gehen? Schreibe auf.
         </div>
-        <input type="text" class="input"/>
+        <input type="text" class="textInput"/>
     </div>
-
 
     <div>-------TEMPORÄR--------</div>
    <h2>This is Html content</h2>
