Bilder hinzugefügt example.html: Nach Beispiel einer Lerneinheit aufgebaut

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -12,28 +12,163 @@
     </script>
 </head>
 <body>
-    <div class="section">
-        <div class="text">Das ist Tim</div>
-        <button class="reading"></button>
-<!--        <img (Bild von Tim einfügen)>-->
+<div class="section">
+    <div class="text">
+        <button class="reading">Vorlesen</button>
+        Das ist Tim
+        <img src="../../testImages/tim.png">
     </div>
-    <div class="section">
+</div>
+
+<div class="section">
+    <div class="text">
         Tim ist 10 Jahre alt und geht in die 4. Klasse.
         Er sitzt im Klassenraum in der letzten Reihe.
         Er hat oft Kopfschmerzen.
         Ständig kneift er die Augen zusammen.
         Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
-        <div class="task">
-            Warum soll Tim zum Augenarzt gehen? Schreibe auf.
-        </div>
-        <input type="text" class="textInput"/>
+    </div>
+    <div class="task">
+        Warum soll Tim zum Augenarzt gehen? Schreibe auf.
+    </div>
+    <input type="text" class="input"/>
+</div>
+
+<div class="chapter">
+    <div class="section">
+        <h1>1 Der Aufbau des menschlichen Auges</h1>
+        <img src="../../testImages/Auge_Klein.png"/>
+        <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
     </div>
 
-    <div>-------TEMPORÄR--------</div>
-   <h2>This is Html content</h2>
-   <b>Enter Color:</b>
-   <input id='color' value='yellow' />
-   <button onclick='changeBgColor();'>Change Bg Color</button>
+    <div class="section">
+        <div class="text">
+            <button class="reading">Vorlesen</button>
+            Zu Hause steht Tim vor dem Spiegel und beobachtet seine Augen. Seine grünen Augen sehen aus wie immer. Er
+            überlegt, wie das Sehen funktioniert: Ganz klar, zum Sehen brauchen wir unsere Augen. Licht muss auch da
+            sein,
+            weil wir im Dunkeln nicht sehen können.
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="text">
+            <button class="reading">Vorlesen</button>
+            Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
+            die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht auch
+            den
+            weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel bezeichnet.
+        </div>
+
+        <div class="task">
+            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
+            Lederhaut</b>
+            <!--TODO: Wie werden Begriffe platziert?        -->
+        </div>
+        <img src="../../testImages/Auge_Groß.png"/>
+    </div>
+
+    <div class="information">
+        <div class="section">
+            <div class="text">
+                Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
+                erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+            </div>
+        </div>
+
+        <div class="section">
+            <img src="../../testImages/Aufbau_Auge.png"/>
+            <!--        TODO: Beschriftung entfernen in diesem Bild-->
+        </div>
+
+        <div class="section">
+            <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
+            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+            <div class="text">
+                In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+            </div>
+        </div>
+
+        <div class="section">
+            <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+            <div class="text">
+                Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen können.
+            </div>
+        </div>
+
+        <div class="section">
+            <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
+            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+            <div class="text">
+                Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den Sehnerv
+                an
+                das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="chapter">
+    <div class="section">
+        <h1>2 Ausbreitung von Licht</h1>
+        <div class="text">
+            <button class="reading">Vorlesen</button>
+            Tim wacht in der Nacht auf und möchte sich etwas zu trinken holen. In seinem Zimmer ist es dunkel. Seine
+            Lampe
+            ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen, mit der er den Weg zur Tür ganz
+            einfach
+            finden kann.
+            <img src="../../testImages/Taschenlampe.png"/>
+        </div>
+    </div>
+    <div class="information">
+        <div class="section">
+            <img src="../../testImages/Wald.png"/>
+        </div>
+        <div class="section">
+            <div class="text">
+                Licht breitet sich immer geradlinig aus.<br>
+                Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
+                fallen.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="chapter">
+    <div class="section">
+        <h1>3 Der Weg des Lichts</h1>
+        <div class="text">
+            <button class="reading">Vorlesen</button>
+            Auch das Licht der Taschenlampe breitet sich geradlinig aus. Alles, was Tim nicht mit dem Lichtstrahl
+            anleuchtet, kann er nicht sehen. Die Gegenstände, die von der Taschenlampe angestrahlt werden, werfen das
+            Licht
+            zurück. Dieses Zurückwerfen des Lichts nennt man Reflexion. Aus dem Grund kann Tim zum Beispiel seine
+            Zimmertür
+            sehen.
+        </div>
+        <div class="task">
+            Welchen Weg nimmt das Licht von der Taschenlampe zur Tür und von dort zurück zu Tim? Wähle aus in welche
+            Richtung der Lichtstrahl geht.
+        </div>
+        <img src="../../testImages/Tim_Taschenlampe.png"/>
+        <img src="../../testImages/Tür.png"/>
+    </div>
+    <div class="infokasten">
+        <div class="section">
+            Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht reflektieren und
+            das
+            Licht von den Gegenständen auf unsere Augen trifft.
+        </div>
+    </div>
+</div>
+
+<div>-------TEMPORÄR--------</div>
+<h2>This is Html content</h2>
+<b>Enter Color:</b>
+<input id='color' value='yellow'/>
+<button onclick='changeBgColor();'>Change Bg Color</button>
 
 </body>
 </html>
