Titel geändert watermark dív class eingefügt, für das Hintergrundbild

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Beispiel Lerneinheit</title>
     <script language='javascript'>
-        function changeBgColor()  {
-            var color= document.getElementById('color').value;
-            document.body.style.backgroundColor= color;
+        function changeBgColor() {
+            var color = document.getElementById('color').value;
+            document.body.style.backgroundColor = color;
             document.getElementsByTagName('aufgabe');
         }
     </script>
 </head>
+
 <body>
 <div class="section">
     <div class="text">
@@ -40,70 +41,76 @@
         <img src="../../testImages/Auge_Klein.png"/>
         <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
     </div>
-
-    <div class="section">
-        <div class="text">
-            <button class="reading">Vorlesen</button>
-            Zu Hause steht Tim vor dem Spiegel und beobachtet seine Augen. Seine grünen Augen sehen aus wie immer. Er
-            überlegt, wie das Sehen funktioniert: Ganz klar, zum Sehen brauchen wir unsere Augen. Licht muss auch da
-            sein,
-            weil wir im Dunkeln nicht sehen können.
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="text">
-            <button class="reading">Vorlesen</button>
-            Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
-            die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht auch
-            den
-            weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel bezeichnet.
-        </div>
-
-        <div class="task">
-            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
-            Lederhaut</b>
-            <!--TODO: Wie werden Begriffe platziert?        -->
-        </div>
-        <img src="../../testImages/Auge_Groß.png"/>
-    </div>
-
-    <div class="information">
+    <div class="watermark">
         <div class="section">
             <div class="text">
-                Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
-                erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+                <button class="reading">Vorlesen</button>
+                Zu Hause steht Tim vor dem Spiegel und beobachtet seine Augen. Seine grünen Augen sehen aus wie immer.
+                Er
+                überlegt, wie das Sehen funktioniert: Ganz klar, zum Sehen brauchen wir unsere Augen. Licht muss auch da
+                sein,
+                weil wir im Dunkeln nicht sehen können.
             </div>
         </div>
 
         <div class="section">
-            <img src="../../testImages/Aufbau_Auge.png"/>
-            <!--        TODO: Beschriftung entfernen in diesem Bild-->
-        </div>
-
-        <div class="section">
-            <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
-            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
             <div class="text">
-                In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+                <button class="reading">Vorlesen</button>
+                Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
+                die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
+                auch
+                den
+                weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel
+                bezeichnet.
             </div>
-        </div>
 
-        <div class="section">
-            <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
-            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-            <div class="text">
-                Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen können.
+            <div class="task">
+                Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
+                Lederhaut</b>
+                <!--TODO: Wie werden Begriffe platziert?        -->
             </div>
+            <img src="../../testImages/Auge_Groß.png"/>
         </div>
 
-        <div class="section">
-            <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
-            <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
-            <div class="text">
-                Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den Sehnerv
-                an
-                das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+        <div class="information">
+            <div class="section">
+                <div class="text">
+                    Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
+                    erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+                </div>
+            </div>
+
+            <div class="section">
+                <img src="../../testImages/Aufbau_Auge.png"/>
+                <!--        TODO: Beschriftung entfernen in diesem Bild-->
+            </div>
+
+            <div class="section">
+                <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
+                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+                <div class="text">
+                    In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+                </div>
+            </div>
+
+            <div class="section">
+                <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+                <div class="text">
+                    Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
+                    können.
+                </div>
+            </div>
+
+            <div class="section">
+                <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
+                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+                <div class="text">
+                    Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
+                    Sehnerv
+                    an
+                    das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+                </div>
             </div>
         </div>
     </div>
