Letzter Paragraph ist jetzt ein text

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -163,9 +163,10 @@
     </div>
     <div class="infokasten">
         <div class="section">
-            Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht reflektieren und
-            das
-            Licht von den Gegenständen auf unsere Augen trifft.
+            <div class="text">
+                Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht reflektieren
+                und das Licht von den Gegenständen auf unsere Augen trifft.
+            </div>
         </div>
     </div>
 </div>
