--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-    <script language='javascript'>
+    <script>
         function changeBgColor() {
             document.body.style.backgroundColor = document.getElementById('color').value;
             document.getElementsByTagName('aufgabe');
+            return 'test';
         }
 
         /**
