--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -16,11 +16,13 @@
 </head>
 
 <body>
+
+<div class="chapter">
 <div class="section">
     <div class="text">
+        <label style="margin-left: 10%">Das ist Tim.<img class="tim" src="../../testImages/tim.png" alt=""></label>
+        <br>
         <button class="reading">Vorlesen</button>
-        Das ist Tim.
-        <img src="../../testImages/tim.png" alt="">
     </div>
 </div>
 
@@ -42,17 +44,19 @@
     <br>
     <input class="submit" type="submit" value="Speichern">
 </div>
+</div>
 
 <div class="chapter">
     <div class="section">
         <h1>1 Der Aufbau des menschlichen Auges</h1>
-        <img class="picture" src="../../testImages/Auge_Klein.png" alt="1"/>
+        <img class="eye-small" src="../../testImages/Auge_Klein.png" alt="1"/>
         <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
     </div>
     <div class="watermark">
         <div class="section">
             <div class="text">
                 <button class="reading">Vorlesen</button>
+                <br>
                 Zu Hause steht Tim vor dem Spiegel und beobachtet seine Augen. Seine grünen Augen sehen aus wie immer.
                 Er
                 überlegt, wie das Sehen funktioniert: Ganz klar, zum Sehen brauchen wir unsere Augen. Licht muss auch da
@@ -64,6 +68,7 @@
         <div class="section">
             <div class="text">
                 <button class="reading">Vorlesen</button>
+                <br>
                 Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
                 die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
                 auch
@@ -79,10 +84,11 @@
             </div>
             <img src="../../testImages/Auge_Groß.png" alt=""/>
         </div>
-
+        <br>
         <div class="information">
             <div class="section">
                 <div class="text">
+                    <label style="font-size: 54px">&#128161</label>
                     Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
@@ -92,7 +98,6 @@
                 <img src="../../testImages/Aufbau_Auge.png"/>
                 <!--        TODO: Beschriftung entfernen in diesem Bild-->
             </div>
-
             <div class="section">
                 <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
@@ -129,21 +134,19 @@
         <h1>2 Ausbreitung von Licht</h1>
         <div class="text">
             <button class="reading">Vorlesen</button>
+            <br>
             Tim wacht in der Nacht auf und möchte sich etwas zu trinken holen. In seinem Zimmer ist es dunkel. Seine
             Lampe
             ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen, mit der er den Weg zur Tür ganz
             einfach
-            finden kann.
+            finden kann.<br>
             <img src="../../testImages/Taschenlampe.png"/>
         </div>
     </div>
     <div class="information">
         <div class="section">
-            <img src="../../testImages/Wald.png"/>
-        </div>
-        <div class="section">
-            <div class="text">
-                Licht breitet sich immer geradlinig aus.<br>
+            <div class="text" id="text_forest">
+                Licht breitet sich immer geradlinig aus.
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
                 fallen.
             </div>
@@ -156,6 +159,7 @@
         <h1>3 Der Weg des Lichts</h1>
         <div class="text">
             <button class="reading">Vorlesen</button>
+            <br>
             Auch das Licht der Taschenlampe breitet sich geradlinig aus. Alles, was Tim nicht mit dem Lichtstrahl
             anleuchtet, kann er nicht sehen. Die Gegenstände, die von der Taschenlampe angestrahlt werden, werfen das
             Licht
@@ -173,6 +177,7 @@
     <div class="information">
         <div class="section">
             <div class="text">
+                <label style="font-size: 54px">&#128161</label>
                 Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
             </div>
