Changes by Florian

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -154,9 +154,11 @@
     <div class="information">
         <div class="section">
             <div class="text" id="text_forest">
+                <t style="font-size: 54px">&#128161</t>
                 Licht breitet sich immer geradlinig aus.
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
-                fallen.
+                fallen.<br>
+                <img src="../../testImages/Wald.png" alt="1"/>
             </div>
         </div>
     </div>
