--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -153,7 +153,7 @@
     </div>
     <div class="information">
         <div class="section">
-            <div class="text" id="text_forest">
+            <div class="text">
                 <t style="font-size: 54px">&#128161</t>
                 Licht breitet sich immer geradlinig aus.
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
