--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -155,10 +155,10 @@
         <div class="section">
             <div class="text">
                 <t style="font-size: 54px">&#128161</t>
-                Licht breitet sich immer geradlinig aus.
+                Licht breitet sich immer geradlinig aus.<br>
                 Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
-                fallen.<br>
-                <img src="../../testImages/Wald.png" alt="1"/>
+                fallen.
+                <img class="wrap-figure" src="../../testImages/Wald.png" alt="1"/>
             </div>
         </div>
     </div>
