--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -186,7 +186,7 @@
     </div>
     <div class="information">
         <div class="section">
-            <div class="text">
+            <div class="text wrap-text">
                 <label style="font-size: 54px">&#128161</label>
                 Unsere Augen sind Lichtempfänger. Wir sehen unsere Umwelt, weil die Gegenstände das Licht reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
