--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
-    <link rel="stylesheet" href="../../css/learningUnit.css" >
+    <link rel="stylesheet" href="../../css/learningUnit.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -26,12 +26,22 @@
 <body>
 
 <div class="chapter">
-<div class="section">
-    <div class="text">
-        <label style="margin-left: 10%">Das ist Tim.<img class="tim" src="../../testImages/tim.png" alt=""></label>
-        <br>
-        <button class="reading">Vorlesen</button>
+    <div class="section">
+        <div class="text wrap-text">
+            Das ist Tim.
+        </div>
+        <div class="section">
+            <div class="text wrap-text">
+                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
+                Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.
+                Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
+                <img class="tim wrap-figure" src="../../testImages/tim.png" alt="">
+            </div>
+        </div>
+
     </div>
+    <button class="reading">Vorlesen</button>
+</div>
 </div>
 
 <div class="section">
