Tim als Tabelle

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -27,21 +27,31 @@
 
 <div class="chapter">
     <div class="section">
-        <div class="text wrap-text">
-            Das ist Tim.
-        </div>
-        <div class="section">
-            <div class="text wrap-text">
-                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
-                Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.
-                Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
-                <img class="tim wrap-figure" src="../../testImages/tim.png" alt="">
-            </div>
-        </div>
+        <table>
+            <tr>
+                <td>Das ist Tim.</td>
+                <td rowspan="2"><img class="tim" src="../../testImages/tim.png" alt=""></td>
+            </tr>
+            <tr class="section">
+                <td>Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
+                    Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.
+                    Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
+                </td>
+            </tr>
+        </table>
+        <!--        <div class="text wrap-text">-->
+        <!--        </div>-->
+        <!--        <div class="section">-->
+        <!--            <div class="text wrap-text">-->
+        <!--                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.-->
+        <!--                Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.-->
+        <!--                Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.-->
+        <!--            </div>-->
+        <!--        </div>-->
 
+        <!--    </div>-->
+        <button class="reading">Vorlesen</button>
     </div>
-    <button class="reading">Vorlesen</button>
-</div>
 </div>
 
 <div class="section">
