--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -29,11 +29,14 @@
     <div class="section">
         <table>
             <tr>
-                <td>Das ist Tim.</td>
+                <td class="text">Das ist Tim.</td>
                 <td rowspan="2"><img class="tim" src="../../testImages/tim.png" alt=""></td>
             </tr>
             <tr class="section">
-                <td>Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
+                <td class="text">
+                    <button class="reading">Vorlesen</button>
+                    <br>
+                    Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
                     Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.
                     Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
                 </td>
@@ -50,16 +53,10 @@
         <!--        </div>-->
 
         <!--    </div>-->
-        <button class="reading">Vorlesen</button>
     </div>
 </div>
 
 <div class="section">
-    <div class="text">
-        Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.
-        Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.
-        Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
-    </div>
     <div class="task">
         Warum soll Tim zum Augenarzt gehen? Schreibe auf.
     </div>
