Tim als Tabelle (2)

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -29,7 +29,7 @@
     <div class="section">
         <table>
             <tr>
-                <td class="text">Das ist Tim.</td>
+                <td class="text table-bottom">Das ist Tim.</td>
                 <td rowspan="2"><img class="tim" src="../../testImages/tim.png" alt=""></td>
             </tr>
             <tr class="section">
