- Added missing Section

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -101,7 +101,8 @@
                 weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel
                 bezeichnet.
             </div>
-
+        </div>
+        <div class="section">
             <div class="task">
                 Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle: <b>Iris, Pupille,
                 Lederhaut</b>
