- Added missing Section

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -195,6 +195,8 @@
             Zimmertür
             sehen.
         </div>
+    </div>
+    <div class="section">
         <div class="task">
             Welchen Weg nimmt das Licht von der Taschenlampe zur Tür und von dort zurück zu Tim? Wähle aus in welche
             Richtung der Lichtstrahl geht.
