- Images for Tasks are now centered

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -108,7 +108,9 @@
                 Lederhaut</b>
                 <!--TODO: Wie werden Begriffe platziert?        -->
             </div>
-            <img src="../../testImages/Auge_Groß.png" alt=""/>
+            <div class="task-image">
+                <img src="../../testImages/Auge_Groß.png" alt=""/>
+            </div>
         </div>
         <br>
         <div class="information">
@@ -199,10 +201,12 @@
     <div class="section">
         <div class="task">
             Welchen Weg nimmt das Licht von der Taschenlampe zur Tür und von dort zurück zu Tim? Wähle aus in welche
-            Richtung der Lichtstrahl geht.
+            Richtung der Lichtstrahl geht.<br>
         </div>
-        <img src="../../testImages/Tim_Taschenlampe.png"/>
-        <img src="../../testImages/Tür.png"/>
+        <div class="task-image">
+            <img src="../../testImages/Tim_Taschenlampe.png"/>
+            <img src="../../testImages/Tür.png"/>
+        </div>
     </div>
     <div class="information">
         <div class="section">
