--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -5,7 +5,6 @@
     <title>Beispiel Lerneinheit</title>
     <link rel="stylesheet" href="../../css/learningUnit.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <script>
         function changeBgColor() {
@@ -63,9 +62,9 @@
 
     <i class="fa fa-keyboard-o" style="font-size:36px"></i>
     <br>
-    <label>
-        <input class="w3-input w3-border w3-animate-input" type="text" style="width:30%">
-    </label>
+    <form>
+        <textarea></textarea>
+    </form>
     <br>
     <input class="submit" type="submit" value="Speichern">
 </div>
