--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -122,11 +122,11 @@
             </div>
 
             <div class="section">
-                <img src="../../testImages/Aufbau_Auge.png"/>
+                <img class="image-series" src="../../testImages/Aufbau_Auge.png"/>
                 <!--        TODO: Beschriftung entfernen in diesem Bild-->
             </div>
             <div class="section">
-                <img src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
+                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 <div class="text">
                     In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
@@ -134,7 +134,7 @@
             </div>
 
             <div class="section">
-                <img src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 <div class="text">
                     Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
@@ -143,7 +143,7 @@
             </div>
 
             <div class="section">
-                <img src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
+                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 <div class="text">
                     Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
