- Bisschen am Auge arbeiten

--- a/src/main/resources/com/example/example.html
+++ b/src/main/resources/com/example/example.html
@@ -120,22 +120,26 @@
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
             </div>
-
-            <div class="section">
+            <div class="diashow">
                 <img class="image-series" src="../../testImages/Aufbau_Auge.png"/>
                 <!--        TODO: Beschriftung entfernen in diesem Bild-->
-            </div>
-            <div class="section">
                 <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_1.png"/>
                 <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
+                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
+                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
+            </div>
+            <div class="section">
+                <img src="../../testImages/Aufbau_Auge.png"/>
+            </div>
+            <div class="section">
                 <div class="text">
                     In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
                 </div>
             </div>
 
             <div class="section">
-                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_2.png"/>
-                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 <div class="text">
                     Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
                     können.
@@ -143,8 +147,6 @@
             </div>
 
             <div class="section">
-                <img class="image-series" src="../../testImages/Aufbau_Auge_Beschriftung_3.png"/>
-                <!--        TODO: Die Beschriftungen sollen zsm mit dem Text eingeblendet werden-->
                 <div class="text">
                     Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
                     Sehnerv
